Creación de maquetado y estilos del componente form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,6 +49,8 @@
   <p>C R U D</p>
 </nav>
 <main class="sections">
-  <div class="section"></div>
+  <div class="section">
+    <app-form></app-form>
+  </div>
   <div class="section"></div>
 </main>
