--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -28,12 +28,14 @@
     height: 700px;
     margin: 20px auto;
     align-items: center;
-    background-color: black;
 }
 
 .section {
     width: 45%;
-    height: 90%;
+    height: 92%;
     margin: 0 auto;
-    background-color: rgb(205, 13, 13);
+    padding: 20px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 10px 20px #cacaca;
+    border-radius: 20px;
 }
