Creación de maquetado y estilos del componente employees

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,5 +52,7 @@
   <div class="section">
     <app-form></app-form>
   </div>
-  <div class="section"></div>
+  <div class="section" id="section-container">
+    <app-employees></app-employees>
+  </div>
 </main>
