--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -39,3 +39,8 @@
     box-shadow: 0px 10px 20px #cacaca;
     border-radius: 20px;
 }
+
+#section-container {
+    background: linear-gradient(270deg, rgba(58,61,180,1) 0%, rgba(131,58,180,1) 35%, rgba(237,23,23,1) 100%);
+    opacity: 80%;
+}
