--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -26,13 +26,13 @@
     display: flex;
     width: 95%;
     height: 700px;
-    margin: 20px auto;
+    margin: 20px auto 0 auto;
     align-items: center;
 }
 
 .section {
     width: 45%;
-    height: 92%;
+    height: 90%;
     margin: 0 auto;
     padding: 20px;
     background-color: rgb(255, 255, 255);
@@ -41,6 +41,7 @@
 }
 
 #section-container {
+    overflow-y: scroll;
     background: linear-gradient(270deg, rgba(58,61,180,1) 0%, rgba(131,58,180,1) 35%, rgba(237,23,23,1) 100%);
     opacity: 80%;
 }
